# email-discriminator

./: .gitignore  .pre-commit-config.yaml  .prefectignore  Dockerfile  README.md  flow-deployment.py  gmail-auth.py  prefect.yaml  pyproject.toml  tox.ini
.github/workflows/: build-push-docker.yml  deploy_flows.yml  main.yml  tests-lint.yml
.prefect/: flows.json
data/: tldr_articles.csv
email_discriminator/: fetch_data.py
email_discriminator/core/data_fetcher/: __init__.py  content_parser.py  email_dataset_builder.py  email_fetcher.py  fetch_data.py
email_discriminator/core/data_versioning/: __init__.py  gcs_versioned_data_handler.py
email_discriminator/core/model/: __init__.py  data_processor.py  label_encoder.py  model.py  pipeline.py
email_discriminator/workflows/: initial_data_dump.py  predict.py  train.py
interface/: app.py  data_handler.py  main.py  prefect_client.py
notebooks/: tldr_articles_exploration.ipynb
scripts/: fetch_data.py
tests/: content_parser_test.py  email_dataset_builder_test.py  email_fetcher_test.py
tests/core/data_fetcher/: content_parser_test.py  email_dataset_builder_test.py  email_fetcher_test.py
tests/core/data_versioning/: gcs_versioned_data_handler_test.py
tests/core/model/: data_preprocessor_test.py  label_encoder_test.py  mode_test.py  model_test.py  pipeline_test.py
