[tool.poetry]
name = "email-discriminator"
version = "0.0.1"
description = "This is a project for the MLOps Zoomcamp Course where I'll be creating an email discriminator"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
readme = "README.md"
packages = [{include = "email_discriminator"}]

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.93.0"
rich = "^13.4.2"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"


[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
