[tool.poetry]
name = "email-discriminator"
version = "0.0.1"
description = "This is a project for the MLOps Zoomcamp Course where I'll be creating an email discriminator"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
readme = "README.md"
packages = [{include = "email_discriminator"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.93.0"
rich = "^13.4.2"
pandas = "^2.0.3"
mlflow = "^2.5.0"
xgboost = "^1.7.6"
plotly = "^5.15.0"
imblearn = "^0.0"
prefect = "^2.11.0"
google-cloud-storage = "^2.10.0"
prefect-gcp = "^0.4.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
tox = "^4.6.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
seaborn = "^0.12.2"


[tool.poetry.group.interface.dependencies]
streamlit = "^1.25.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
